<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab1">

    <EditText
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Text_MASCARILLAS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/Scroll_Mascarillas"
        android:layout_width="366dp"
        android:layout_height="505dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo">


        <LinearLayout
            android:id="@+id/Layout_bandeja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/Layout_objeto1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:drawable/bottom_bar"
                android:dividerPadding="@dimen/material_emphasis_medium"
                android:orientation="horizontal"
                android:paddingVertical="20dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="343dp"
                    android:layout_height="148dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/Test_Desc"
                    app:srcCompat="@drawable/uno" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editText6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Test_Nomb" />

                    <EditText
                        android:id="@+id/editText7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Test_Desc" />

                    <EditText
                        android:id="@+id/editText8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Text_Precio" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_objeto2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="20dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="348dp"
                    android:layout_height="134dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/PlainText_test"
                    app:srcCompat="@drawable/dos" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editText12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Test_Nomb" />

                    <EditText
                        android:id="@+id/editText14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Test_Desc" />

                    <EditText
                        android:id="@+id/editText15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Text_Precio" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_objeto3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="20dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="349dp"
                    android:layout_height="149dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/PlainText_test"
                    app:srcCompat="@drawable/cuatro" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editText17"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Test_Nomb" />

                    <EditText
                        android:id="@+id/editText18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Test_Desc" />

                    <EditText
                        android:id="@+id/editText19"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Text_Precio" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_objeto4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="20dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="336dp"
                    android:layout_height="160dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/uno" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editText20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Test_Nomb" />

                    <EditText
                        android:id="@+id/editText22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Test_Desc" />

                    <EditText
                        android:id="@+id/editText23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Text_Precio" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Layout_objeto5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingVertical="20dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="340dp"
                    android:layout_height="149dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/dos" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editText24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Test_Nomb" />

                    <EditText
                        android:id="@+id/editText25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Test_Desc" />

                    <EditText
                        android:id="@+id/editText26"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text="@string/Text_Precio" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>